--- a/elk_metrics_7x/createElasticIndexes.yml
+++ b/elk_metrics_7x/createElasticIndexes.yml
@@ -239,26 +239,34 @@
       delay: 30
       run_once: true
 
-    # - name: Create basic indexes
-    #   uri:
-    #     url: "http://127.0.0.1:5601/api/kibana/settings/defaultIndex"
-    #     method: POST
-    #     body: "{{ item.index_options | to_json }}"
-    #     status_code: 200
-    #     body_format: json
-    #     headers:
-    #       Content-Type: "application/json"
-    #       kbn-xsrf: "{{ inventory_hostname | to_uuid }}"
-    #   with_items:
-    #     - name: "default"
-    #       index_options:
-    #         value: "default"
-    #   register: kibana_indexes
-    #   until: kibana_indexes is success
-    #   retries: 6
-    #   delay: 30
-    #   run_once: true
-    #   ignore_errors: True
+    - name: debug index creation
+      debug:
+        var: kibana_indexes
+
+    - name: Create basic indexes
+      uri:
+        url: "http://127.0.0.1:5601/api/kibana/settings/defaultIndex"
+        method: POST
+        body: "{{ item.index_options | to_json }}"
+        status_code: 200
+        body_format: json
+        headers:
+          Content-Type: "application/json"
+          kbn-xsrf: "{{ inventory_hostname | to_uuid }}"
+      with_items:
+        - name: "default"
+          index_options:
+            value: "default"
+      register: kibana_indexes
+      until: kibana_indexes is success
+      retries: 6
+      delay: 30
+      run_once: true
+      ignore_errors: True
+
+    - name: debug index creation
+      debug:
+        var: kibana_indexes
 
   tags:
     - server-install
