--- a/elk_metrics_7x/tests/functional.yml
+++ b/elk_metrics_7x/tests/functional.yml
@@ -115,7 +115,7 @@
     - name: Run environment setup
       become: yes
       become_user: root
-      command: "${HOME}/ansible_venv/bin/ansible-playbook -i {{ inventory_file }} -e @test-vars.yml _key-setup.yml"
+      command: "${HOME}/ansible_venv/bin/ansible-playbook -i {{ inventory_file }} -e @test-vars.yml -e 'ansible_python_interpreter=/usr/bin/python3' _key-setup.yml"
       environment:
         ANSIBLE_LOG_PATH: "/tmp/elk-metrics-7x-logs/ansible-elk-test-container-setup.log"
       args:
@@ -127,7 +127,7 @@
     - name: Run environment setup
       become: yes
       become_user: root
-      command: "${HOME}/ansible_venv/bin/ansible-playbook -i {{ inventory_file }} -e @test-vars.yml _container-setup.yml"
+      command: "${HOME}/ansible_venv/bin/ansible-playbook -i {{ inventory_file }} -e @test-vars.yml -e 'ansible_python_interpreter=/usr/bin/python3' _container-setup.yml"
       environment:
         ANSIBLE_LOG_PATH: "/tmp/elk-metrics-7x-logs/ansible-elk-test-container-setup.log"
       args:
@@ -145,7 +145,7 @@
     - name: Run functional test
       become: yes
       become_user: root
-      command: "${HOME}/ansible_venv/bin/ansible-playbook -i tests/{{ inventory_file }} -e @tests/test-vars.yml site.yml"
+      command: "${HOME}/ansible_venv/bin/ansible-playbook -i tests/{{ inventory_file }} -e @tests/test-vars.yml -e 'ansible_python_interpreter=/usr/bin/python3' --connection=local site.yml"
       environment:
         ANSIBLE_LOG_PATH: "/tmp/elk-metrics-7x-logs/ansible-elk-test-deployment.log"
       args:
@@ -154,7 +154,7 @@
     - name: Show cluster state
       become: yes
       become_user: root
-      command: "${HOME}/ansible_venv/bin/ansible-playbook -i tests/{{ inventory_file }} -e @tests/test-vars.yml showElasticCluster.yml"
+      command: "${HOME}/ansible_venv/bin/ansible-playbook -i tests/{{ inventory_file }} -e @tests/test-vars.yml -e 'ansible_python_interpreter=/usr/bin/python3' --connection=local showElasticCluster.yml"
       environment:
         ANSIBLE_LOG_PATH: "/tmp/elk-metrics-7x-logs/ansible-elk-test-show-cluster.log"
       args:
